plugins {
    id 'java'
    id 'net.minecraftforge.gradle' version "${forge_gradle_version}"
}

group = mod_group_id
version = mod_version
archivesBaseName = mod_id

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
    withSourcesJar()
}

minecraft {
    mappings channel: mapping_channel, version: mapping_version

    runs {
        server {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            mods {
                "${mod_id}" {
                    source sourceSets.main
                }
            }
        }
    }
}

repositories {
    // no extra repos needed
}

dependencies {
    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
}

tasks.named('test') { useJUnitPlatform() }

jar {
    manifest {
        attributes([
            'Specification-Title'     : mod_id,
            'Specification-Vendor'    : mod_authors,
            'Specification-Version'   : '1',
            'Implementation-Title'    : mod_name,
            'Implementation-Version'  : mod_version,
            'Implementation-Vendor'   : mod_authors,
        ])
    }
}

processResources {
    var replaceProperties = [
        minecraft_version   : minecraft_version,
        forge_version       : forge_version,
        mod_id              : mod_id,
        mod_name            : mod_name,
        mod_version         : mod_version,
        mod_group_id        : mod_group_id,
        mod_authors         : mod_authors,
        mod_description     : mod_description,
    ]
    inputs.properties replaceProperties
    filesMatching(['META-INF/mods.toml', 'pack.mcmeta']) {
        expand replaceProperties
    }
}
